[workspace]
resolver = "2"
members = [
  "nodes/max/plantarium/*",
  "packages/macros",
  "packages/types",
  "packages/utils",
]
exclude = [
    "nodes/max/plantarium/.template",
    "nodes/max/plantarium/zig"
]

[profile.release]
lto = true
# Tell `rustc` to optimize for small code size.
opt-level = "s"
