[package]
name = "subtract"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen = { version = "0.19.2", default-features = false, features = [
  "realloc",
] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:subtract"

[package.metadata.component.dependencies]
