[package]
name = "math"
version = "0.1.0"
authors = ["Max Richter <jim-x@web.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
console_error_panic_hook = { version = "0.1.7", optional = true }
plantarium = { version = "0.1.0", path = "../../../../packages/plantarium" }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
