[package]
name = "rotate"
version = "0.1.0"
authors = ["Max Richter <jim-x@web.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nodarium_utils = { version = "0.1.0", path = "../../../../packages/utils" }
nodarium_macros = { version = "0.1.0", path = "../../../../packages/macros" }
serde = { version = "1.0", features = ["derive"] }
glam = "0.30.10"
